modules/compute/main.tf


# Instance profile
resource "aws_iam_instance_profile" "this" {
  name = "${var.env}-instance-profile"
  role = aws_iam_role.this.name
}

resource "aws_iam_role" "this" {
  name = "${var.env}-instance-role"
  path = "/"

  assume_role_policy = <<EOF
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Action": "sts:AssumeRole",
            "Principal": {
               "Service": "ec2.amazonaws.com"
            },
            "Effect": "Allow",
            "Sid": "STS"
        }
    ]
}
EOF
}

resource "aws_iam_role_policy_attachment" "dev-resources-ssm-policy" {
  role       = aws_iam_role.this.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
}

# ACM config
resource "aws_acm_certificate" "this" {
  domain_name               = "${var.env}.${data.aws_route53_zone.this.name}"
  subject_alternative_names = ["*.${var.env}.${data.aws_route53_zone.this.name}"]
  validation_method         = "DNS"

  tags = {
    Env = var.env
  }

  lifecycle {
    create_before_destroy = true
  }
}

# Route53 record
resource "aws_route53_record" "this" {
  for_each = {
    for dvo in aws_acm_certificate.this.domain_validation_options : dvo.domain_name => {
      name   = dvo.resource_record_name
      record = dvo.resource_record_value
      type   = dvo.resource_record_type
    }
  }

  allow_overwrite = true
  name            = each.value.name
  records         = [each.value.record]
  ttl             = 60
  type            = each.value.type
  zone_id         = data.aws_route53_zone.this.zone_id
}

# ACM validation
resource "aws_acm_certificate_validation" "this" {
  certificate_arn         = aws_acm_certificate.this.arn
  validation_record_fqdns = [for record in aws_route53_record.this : record.fqdn]
}

resource "aws_route53_record" "worker" {
  zone_id = data.aws_route53_zone.this.zone_id
  name    = "${var.env}.${data.aws_route53_zone.this.name}"
  type    = "A"

  alias {
    name                   = aws_lb.worker_lb.dns_name
    zone_id                = aws_lb.worker_lb.zone_id
    evaluate_target_health = true
  }
}

# LB listener
resource "aws_lb_listener" "worker" {
  load_balancer_arn = aws_lb.worker_lb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

resource "aws_lb_listener" "worker_80" {
  load_balancer_arn = aws_lb.worker_lb.arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = aws_acm_certificate.this.arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.this.arn
  }
}

resource "aws_autoscaling_attachment" "asg_attachment_bar" {
  autoscaling_group_name = aws_autoscaling_group.this.id
  alb_target_group_arn   = aws_lb_target_group.this.arn
}

# compute target group
resource "aws_lb_target_group" "this" {
  name     = "${var.env}-compute-lb-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = var.vpc_id
}
